# ZYLab

./: .gitignore  AndroidManifest.xml  README.md  build.gradle  import-summary.txt  local.properties  project.properties  settings.gradle
ModuleFFmpeg/: build.gradle
ModuleFFmpeg/jni/: Android.mk  Application.mk
ModuleNative/: CMakeLists.txt  build.gradle
ModuleNative/jni/: Android.mk  native-lib.cpp  native-lib.h  person_info.c  person_info.h  pthread_demo1.h
ModuleNative/src/main/: AndroidManifest.xml
ModuleNative/src/main/cpp/: native-lib.cpp  pthread_demo1.cpp  pthread_demo2.cpp  pthread_demo2.h
ModuleNative/src/main/java/zystudio/nativemodule/: CaseNativeInvoke.java  LocalRunnable.java  Person.java
ModuleNative/src/main/res/values/: strings.xml
MyNativeLib/: proguard-rules.pro
MyVolley/: build.gradle
appDemo/: build.gradle
app_demo/: build.gradle
app_partner/: build.gradle
assets/: googledemo.html  navigation_fix.json
demo/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
res/drawable/: clip_img.xml  layer_img.xml  layerdrawable.xml  menu_item_skin_selector.xml  scale_img.xml  skinbitmap.xml
res/layout/: activity_main.xml  case_anim1.xml  case_custview_attr.xml  case_decor_measure.xml  case_drawable.xml  case_webview.xml  caseforanimview.xml  casefortouch.xml  casefortouch2.xml  casevelloy_activity.xml  cust_menu.xml  mixcolor.xml  mylinearlayout.xml  myscrollview.xml  overscrollview.xml  qq_navigation.xml  qq_navigation_item.xml  qq_navigation_scrollview.xml  (+1 more)
taobaoavsdk/: build.gradle  taobaoavsdk-debug.aar
(+456 files in other folders)
